# poc-multi-language-lightweight-packaging

./: .gitignore  README.md  build-all.ps1  docker-build-all.ps1  docker-measure.ps1  measure.ps1  poc-multi-language-lightweight-packaging.sln
_common-spec/: CLI_SPEC.md
csharp/: README.md
csharp-lightweight/: README.md
csharp-lightweight/after-minimize/: Program.cs  app.csproj  build.ps1
csharp-lightweight/before-minimize/: build.ps1
csharp/0-before-self-contained/: build.ps1
csharp/0-standard-self-contained/: build.ps1
csharp/1-after-aot/: Dockerfile  build.ps1
csharp/1-after-r2r/: build.ps1
csharp/1-after-trimmed/: app.csproj  build.ps1
csharp/1-optimize-aot/: build.ps1
csharp/1-optimize-r2r/: app.csproj  build.ps1
csharp/1-optimize-trimmed/: Dockerfile  build.ps1
csharp/2-amalgamate/: Dockerfile  Program.cs  app.csproj  build.ps1
csharp/2-amalgamate-aot/: Dockerfile  build.ps1
csharp/3-best/: Dockerfile  app.csproj  build.ps1
csharp/3-best-max-trim/: Dockerfile  README.md  build.ps1
csharp/after-aot/: build.ps1
csharp/after-r2r/: Dockerfile  Program.cs  build.ps1
csharp/after-trimmed/: Program.cs  build.ps1
csharp/aot-after/: build.ps1
csharp/before-self-contained/: Dockerfile  app.csproj  build.ps1
csharp/self-contained-before/: build.ps1
go/: README.md
go-lightweight/: README.md
go-lightweight/after-minimize/: build.ps1
go-lightweight/before-minimize/: build.ps1
go/0-before-default-build/: build.ps1  main.go
go/0-standard-default-build/: build.ps1
go/1-after-strip-upx/: build.ps1
go/1-after-tinygo/: build.ps1
go/1-optimize-strip-upx/: build.ps1
go/1-optimize-tinygo/: build.ps1
go/2-amalgamate/: Dockerfile  build.ps1  go.mod
go/2-amalgamate-tinygo/: Dockerfile  build.ps1
go/3-best/: Dockerfile  build.ps1
go/3-best-leaking-gc/: Dockerfile  README.md  build.ps1
go/after-strip-upx/: Dockerfile  build.ps1
go/after-tinygo/: Dockerfile  build.ps1
go/before-default-build/: Dockerfile  build.ps1
go/default-build-before/: build.ps1
go/strip-upx-after/: build.ps1
java-kotlin/: README.md
java-kotlin-lightweight/: README.md
java-kotlin-lightweight/after-minimize/: build.ps1
java-kotlin-lightweight/after-minimize-no-runtime/: build.ps1  pom.xml
java-kotlin-lightweight/before-minimize/: build.ps1  pom.xml
java-kotlin/1-after-jlink/: build.ps1
node/: README.md
node-lightweight/: README.md
python/: README.md
python-lightweight/: README.md
rust/: README.md
rust-lightweight/: README.md
rust/1-after-musl-static/: Cargo.toml  build.ps1
rust/1-after-musl-static/src/: main.rs
rust/1-optimize-size-profile-upx/: Cargo.toml  build.ps1
rust/2-amalgamate/: Cargo.toml  Dockerfile  build.ps1
rust/3-best/: Cargo.toml  Dockerfile  README.md  build.ps1
rust/3-best/.cargo/: config.toml
(+168 files in other folders)
