[package]
name = "app"
version = "1.0.0"
edition = "2021"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }

[[bin]]
name = "app"
path = "src/main.rs"

# Size-tuned profile, but musl target gives a fully-static Linux binary suitable for FROM scratch
[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
