[package]
name = "app"
version = "1.0.0"
edition = "2021"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }

[[bin]]
name = "app"
path = "src/main.rs"

# Aggressive size-focused release profile
[profile.release]
opt-level     = "z"        # optimize for size
lto           = true       # link-time optimization across crates
codegen-units = 1          # single compilation unit (more optimization)
panic         = "abort"    # remove unwinding machinery
strip         = true       # strip symbols + debug info
