[package]
name = "app"
version = "1.0.0"
edition = "2021"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }

[[bin]]
name = "app"
path = "src/main.rs"

# 3-best (Rust): every 2-amalgamate knob + nightly build-std + immediate-abort + minimal panic
# Requires: rust nightly toolchain (`rustup install nightly`)
# Built via: cargo +nightly build --release -Z build-std=std,panic_abort \
#                 -Z build-std-features=panic_immediate_abort,optimize_for_size \
#                 --target x86_64-unknown-linux-musl
[profile.release]
opt-level     = "z"
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
overflow-checks = false
debug         = false
incremental   = false
